# qt-android-cmake-tutorial

./: CMakeLists.txt  README.md  main.cpp
android/: CMakeLists.txt  deployment-settings.json.in
cmake/: deployment-settings.json.in  qt-for-android.cmake
